--- a/app/src/main/res/layout/activity_feedback_detail.xml
+++ b/app/src/main/res/layout/activity_feedback_detail.xml
@@ -98,7 +98,9 @@
                             <LinearLayout
                                 android:id="@+id/layout_image_2"
                                 android:layout_width="60dp"
-                                android:layout_height="60dp">
+                                android:layout_height="60dp"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginRight="8dp">
 
                                 <ImageView
                                     android:id="@+id/iv_location_image_2"
@@ -112,7 +114,8 @@
                             <LinearLayout
                                 android:id="@+id/layout_image_3"
                                 android:layout_width="60dp"
-                                android:layout_height="60dp">
+                                android:layout_height="60dp"
+                                android:layout_marginRight="8dp">
 
                                 <ImageView
                                     android:id="@+id/iv_location_image_3"
